// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should launch login when button is pressed: Default Header 1`] = `
<div>
  <div
    class="css-0"
  >
    <div
      class="css-1m65r4j"
    >
      <div
        class="css-q4hjtx"
      >
        <button
          aria-label="Open Menu"
          class="chakra-button css-1s5iq1h"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="chakra-icon css-onkibi"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M 3 5 A 1.0001 1.0001 0 1 0 3 7 L 21 7 A 1.0001 1.0001 0 1 0 21 5 L 3 5 z M 3 11 A 1.0001 1.0001 0 1 0 3 13 L 21 13 A 1.0001 1.0001 0 1 0 21 11 L 3 11 z M 3 17 A 1.0001 1.0001 0 1 0 3 19 L 21 19 A 1.0001 1.0001 0 1 0 21 17 L 3 17 z"
              fill="currentColor"
            />
          </svg>
        </button>
        <div
          class="chakra-stack css-chgbhg"
        >
          <div
            class="css-0"
          >
            <img
              alt=""
              class="chakra-image css-0"
              src="admios-logo.svg"
            />
          </div>
          <nav
            class="chakra-stack css-1eq794"
          >
            <a
              class="css-1hol3b3"
              href="/"
            >
              Board
            </a>
          </nav>
        </div>
        <div
          class="css-70qvj9"
        >
          <button
            aria-controls="menu-list-:r3:"
            aria-expanded="false"
            aria-haspopup="menu"
            class="chakra-button chakra-menu__menu-button css-czglya"
            id="menu-button-:r3:"
            type="button"
          >
            <span
              class="chakra-button__icon css-1wh2kri"
            >
              <svg
                aria-hidden="true"
                class="chakra-icon css-onkibi"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0,12a1.5,1.5,0,0,0,1.5,1.5h8.75a.25.25,0,0,1,.25.25V22.5a1.5,1.5,0,0,0,3,0V13.75a.25.25,0,0,1,.25-.25H22.5a1.5,1.5,0,0,0,0-3H13.75a.25.25,0,0,1-.25-.25V1.5a1.5,1.5,0,0,0-3,0v8.75a.25.25,0,0,1-.25.25H1.5A1.5,1.5,0,0,0,0,12Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="css-xl71ch"
            >
              Action
            </span>
          </button>
          <div
            class="css-0"
            style="visibility: hidden; position: absolute; min-width: max-content; inset: 0 auto auto 0;"
          >
            <div
              aria-orientation="vertical"
              class="chakra-menu__menu-list css-sjt5nk"
              id="menu-list-:r3:"
              role="menu"
              style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
              tabindex="-1"
            >
              <button
                class="chakra-menu__menuitem css-1k756t9"
                data-index="0"
                data-testid="add-state-button"
                id="menu-list-:r3:-menuitem-:r4:"
                role="menuitem"
                tabindex="-1"
                type="button"
              >
                Add State
              </button>
              <button
                class="chakra-menu__menuitem css-1k756t9"
                data-index="1"
                data-testid="create-random-task-button"
                id="menu-list-:r3:-menuitem-:r5:"
                role="menuitem"
                tabindex="-1"
                type="button"
              >
                Create 10 random tasks
              </button>
            </div>
          </div>
          <button
            aria-controls="menu-list-:r7:"
            aria-expanded="false"
            aria-haspopup="menu"
            class="chakra-button chakra-menu__menu-button css-aqz4t6"
            data-testid="user-menu-button"
            id="menu-button-:r7:"
            type="button"
          >
            <span
              class="css-xl71ch"
            >
              <span
                class="chakra-avatar css-332l87"
              >
                <div
                  aria-label="guest"
                  class="chakra-avatar__initials css-0"
                  role="img"
                >
                  g
                </div>
              </span>
            </span>
          </button>
          <div
            class="css-0"
            style="visibility: hidden; position: absolute; min-width: max-content; inset: 0 auto auto 0;"
          >
            <div
              aria-orientation="vertical"
              class="chakra-menu__menu-list css-1jabnse"
              id="menu-list-:r7:"
              role="menu"
              style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
              tabindex="-1"
            >
              <br />
              <div
                class="css-gmuwbf"
              >
                <span
                  class="chakra-avatar css-332l87"
                >
                  <div
                    aria-label="guest"
                    class="chakra-avatar__initials css-0"
                    role="img"
                  >
                    g
                  </div>
                </span>
              </div>
              <br />
              <div
                class="css-gmuwbf"
              >
                <p>
                  guest
                   
                </p>
              </div>
              <br />
              <hr
                aria-orientation="horizontal"
                class="chakra-menu__divider css-0"
              />
              <button
                class="chakra-menu__menuitem css-1k756t9"
                data-index="0"
                data-testid="login-button"
                id="menu-list-:r7:-menuitem-:r8:"
                role="menuitem"
                tabindex="-1"
                type="button"
              >
                Login / Register
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1kxrbkv"
    >
      <div
        class="css-erspa2"
      />
    </div>
  </div>
</div>
`;

exports[`should launch logout when button is pressed: Logged in Header 1`] = `
<div>
  <div
    class="css-0"
  >
    <div
      class="css-1m65r4j"
    >
      <div
        class="css-q4hjtx"
      >
        <button
          aria-label="Open Menu"
          class="chakra-button css-1s5iq1h"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="chakra-icon css-onkibi"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M 3 5 A 1.0001 1.0001 0 1 0 3 7 L 21 7 A 1.0001 1.0001 0 1 0 21 5 L 3 5 z M 3 11 A 1.0001 1.0001 0 1 0 3 13 L 21 13 A 1.0001 1.0001 0 1 0 21 11 L 3 11 z M 3 17 A 1.0001 1.0001 0 1 0 3 19 L 21 19 A 1.0001 1.0001 0 1 0 21 17 L 3 17 z"
              fill="currentColor"
            />
          </svg>
        </button>
        <div
          class="chakra-stack css-chgbhg"
        >
          <div
            class="css-0"
          >
            <img
              alt=""
              class="chakra-image css-0"
              src="admios-logo.svg"
            />
          </div>
          <nav
            class="chakra-stack css-1eq794"
          >
            <a
              class="css-1hol3b3"
              href="/"
            >
              Board
            </a>
          </nav>
        </div>
        <div
          class="css-70qvj9"
        >
          <button
            aria-controls="menu-list-:rf:"
            aria-expanded="false"
            aria-haspopup="menu"
            class="chakra-button chakra-menu__menu-button css-czglya"
            id="menu-button-:rf:"
            type="button"
          >
            <span
              class="chakra-button__icon css-1wh2kri"
            >
              <svg
                aria-hidden="true"
                class="chakra-icon css-onkibi"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M0,12a1.5,1.5,0,0,0,1.5,1.5h8.75a.25.25,0,0,1,.25.25V22.5a1.5,1.5,0,0,0,3,0V13.75a.25.25,0,0,1,.25-.25H22.5a1.5,1.5,0,0,0,0-3H13.75a.25.25,0,0,1-.25-.25V1.5a1.5,1.5,0,0,0-3,0v8.75a.25.25,0,0,1-.25.25H1.5A1.5,1.5,0,0,0,0,12Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <span
              class="css-xl71ch"
            >
              Action
            </span>
          </button>
          <div
            class="css-0"
            style="visibility: hidden; position: absolute; min-width: max-content; inset: 0 auto auto 0;"
          >
            <div
              aria-orientation="vertical"
              class="chakra-menu__menu-list css-sjt5nk"
              id="menu-list-:rf:"
              role="menu"
              style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
              tabindex="-1"
            >
              <button
                class="chakra-menu__menuitem css-1k756t9"
                data-index="0"
                data-testid="add-state-button"
                id="menu-list-:rf:-menuitem-:rg:"
                role="menuitem"
                tabindex="-1"
                type="button"
              >
                Add State
              </button>
              <button
                class="chakra-menu__menuitem css-1k756t9"
                data-index="1"
                data-testid="create-random-task-button"
                id="menu-list-:rf:-menuitem-:rh:"
                role="menuitem"
                tabindex="-1"
                type="button"
              >
                Create 10 random tasks
              </button>
            </div>
          </div>
          <button
            aria-controls="menu-list-:rj:"
            aria-expanded="false"
            aria-haspopup="menu"
            class="chakra-button chakra-menu__menu-button css-aqz4t6"
            data-testid="user-menu-button"
            id="menu-button-:rj:"
            type="button"
          >
            <span
              class="css-xl71ch"
            >
              <span
                class="chakra-avatar css-332l87"
              >
                <div
                  aria-label="test"
                  class="chakra-avatar__initials css-0"
                  role="img"
                >
                  t
                </div>
              </span>
            </span>
          </button>
          <div
            class="css-0"
            style="visibility: hidden; position: absolute; min-width: max-content; inset: 0 auto auto 0;"
          >
            <div
              aria-orientation="vertical"
              class="chakra-menu__menu-list css-1jabnse"
              id="menu-list-:rj:"
              role="menu"
              style="transform-origin: var(--popper-transform-origin); opacity: 0; visibility: hidden; transform: scale(0.8) translateZ(0);"
              tabindex="-1"
            >
              <br />
              <div
                class="css-gmuwbf"
              >
                <span
                  class="chakra-avatar css-332l87"
                >
                  <div
                    aria-label="test"
                    class="chakra-avatar__initials css-0"
                    role="img"
                  >
                    t
                  </div>
                </span>
              </div>
              <br />
              <div
                class="css-gmuwbf"
              >
                <p>
                  test
                   
                </p>
              </div>
              <br />
              <hr
                aria-orientation="horizontal"
                class="chakra-menu__divider css-0"
              />
              <button
                class="chakra-menu__menuitem css-1k756t9"
                data-index="0"
                data-testid="logout-button"
                id="menu-list-:rj:-menuitem-:rk:"
                role="menuitem"
                tabindex="-1"
                type="button"
              >
                Logout
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="css-1kxrbkv"
    >
      <div
        class="css-erspa2"
      />
    </div>
  </div>
</div>
`;
